Wed Nov 17 23:19:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat: remove quotes from arguments to be quoted.

	* lib/mkmf.rb (create_makefile): use forward slashes in messages.

	* lib/mkmf.rb (create_makefile): make extension libraries messages
	  brief.

	* win32/Makefile.sub (MAKEDIRS): should not include silent flag.

	* common.mk (ext/ripper/ripper.c, ext/json/parser/parser.c): pass
	  Q and ECHO.  [ruby-core:33226]

Wed Nov 17 16:09:52 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/test_tracer.rb: new test case.
	  mimimal regression test for r29280.

Wed Nov 17 16:04:23 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/envutil.rb (Test::Unit::Assersions#assert_warn):
	  new assersion to assert that a particular warning message is
	  displayed.
	  forwardport from branches/ruby_1_9_2@29795.

Wed Nov 17 15:16:48 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regint.h (OnigOpInfoType): constify name.

	* regcomp.c (op2name): constify return value.

	* regcomp.c (onig_print_compiled_byte_code): use PRIuPTR and
	  uintptr_t to clean warnings.

	* regcomp.c (print_indent_tree): use PRIxPTR and intptr_t.

	* regexec.c (match_at): use PRIdPTR and intptr_t.

Wed Nov 17 09:49:10 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/shift_jis.c (property_name_to_ctype): fix memory leak.

	* enc/euc_jp.c (property_name_to_ctype): ditto.

Tue Nov 17 08:54:04 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding as needed.  [ruby-core:33135]

Tue Nov 16 22:30:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_insnhelper.c (vm_throw): remove fear of undefined behavior :-)
	  Coverity Scan found this bug.

Tue Nov 16 09:33:00 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (to_digits): avoid unused
	variables warning, reported by Aaron Patterson.

Tue Nov 16 06:39:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (PACK_ITEM_ADJUST): return nil not result array and yield