@@ -225,6 +225,14 @@ class TestEncodings < Test::Unit::TestCase
     assert_equal("UTF-8",    data.join.encoding.name)
     assert_equal("UTF-8",    data.to_csv.encoding.name)
   end
+  
+  def test_encoding_is_upgraded_for_ascii_content_during_writing_as_needed
+    data = ["foo".force_encoding("ISO-8859-1"), "\u3042"]
+    assert_equal("ISO-8859-1", data.first.encoding.name)
+    assert_equal("UTF-8",      data.last.encoding.name)
+    assert_equal("UTF-8",      data.join.encoding.name)
+    assert_equal("UTF-8",      data.to_csv.encoding.name)
+  end
 
   private
   
